--- a/Sparc.Blossom.Template/_Shared/NavMenu.razor.scss
+++ b/Sparc.Blossom.Template/_Shared/NavMenu.razor.scss
@@ -1,4 +1,4 @@
-.navbar-toggler {
+input[type=checkbox] {
     appearance: none;
     cursor: pointer;
     width: 3.5rem;
@@ -9,19 +9,24 @@
     right: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.1);
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
+
+    &:checked {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 }
 
-.navbar-toggler:checked {
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-.top-row {
+figure {
     min-height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
-}
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.navbar-brand {
-    font-size: 1.1rem;
+    a {
+        font-size: 1.1rem;
+        color: white;
+    }
 }
 
 .bi {
@@ -46,20 +51,26 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-list-nested' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5z'/%3E%3C/svg%3E");
 }
 
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+ul {
+    list-style: none;
+    padding-left: 0;
 }
 
-    .nav-item:first-of-type {
+li {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+    margin: 0 1rem;
+
+    &:first-of-type {
         padding-top: 1rem;
     }
 
-    .nav-item:last-of-type {
+    &:last-of-type {
         padding-bottom: 1rem;
     }
 
-    .nav-item ::deep .nav-link {
+    ::deep .nav-link {
+        box-sizing: border-box;
         color: #d7d7d7;
         background: none;
         border: none;
@@ -69,35 +80,36 @@
         align-items: center;
         line-height: 3rem;
         width: 100%;
+        padding: 0.5rem 1rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.37);
-    color: white;
+    ::deep a.active {
+        background-color: rgba(255,255,255,0.37);
+        color: white;
+    }
+
+    ::deep .nav-link:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }
 }
 
-.nav-item ::deep .nav-link:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-.nav-scrollable {
+nav {
     display: none;
 }
 
-.navbar-toggler:checked ~ .nav-scrollable {
+input[type=checkbox]:checked ~ nav {
     display: block;
 }
 
 @media (min-width: 641px) {
-    .navbar-toggler {
+    input[type=checkbox] {
         display: none;
     }
 
-    .nav-scrollable {
+    nav {
         /* Never collapse the sidebar for wide screens */
         display: block;
-
         /* Allow sidebar to scroll for tall menus */
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
