--- a/Sparc.Blossom.Template/wwwroot/app.css
+++ b/Sparc.Blossom.Template/wwwroot/app.css
@@ -2,38 +2,35 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-a, .btn-link {
-  color: #006bb7;
+body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-.btn-primary {
+a {
+  color: #006bb7;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+button {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+  padding: 6px 12px;
+  outline: none;
+  box-shadow: none;
+  border-radius: 8px;
 }
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+button:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-.content {
-  padding-top: 1.1rem;
 }
 
 h1:focus {
   outline: none;
-}
-
-.valid.modified:not([type=checkbox]) {
-  outline: 1px solid #26b050;
-}
-
-.invalid {
-  outline: 1px solid #e50000;
-}
-
-.validation-message {
-  color: #e50000;
 }
 
 .blazor-error-boundary {
@@ -41,20 +38,12 @@ h1:focus {
   padding: 1rem 1rem 1rem 3.7rem;
   color: white;
 }
-
 .blazor-error-boundary::after {
   content: "An error has occurred.";
 }
 
-.darker-border-checkbox.form-check-input {
-  border-color: #929292;
-}
-
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
-}
-
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
+@media (min-width: 641px) {
+  body {
+    flex-direction: row;
+  }
 }
